After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745344 - overlay scrollbar fail
overlay scrollbar fail
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkScrolledWindow
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-02-28 20:44 UTC by Matthias Clasen
Modified: 2015-03-02 14:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
scrolledwindow: Add motion mask to the widget window (1.18 KB, patch)
2015-03-02 14:49 UTC, Carlos Garnacho
none Details | Review

Description Matthias Clasen 2015-02-28 20:44:07 UTC
When gnome-initial-setup is shown on a small screen (you can force this with GIS_SMALL_SCREEN=1, it shows maximized, and when you unmaximize it, it puts the entire page content in a scrolled window. I do get the undershoot indication at the expected place, but the overlay scrollbars just don't show up most of the time.
Comment 1 Matthias Clasen 2015-03-02 13:09:33 UTC
In my debugging, the captured event handler in GtkScrolledWindow is only seeing enter/leave events, no motion. Adding GDK_POINTER_MOTION_MASK to the scrolled windows event mask makes it work.
Comment 2 Matthias Clasen 2015-03-02 13:21:41 UTC
In my debugging, the captured event handler in GtkScrolledWindow is only seeing enter/leave events, no motion. Adding GDK_POINTER_MOTION_MASK to the scrolled windows event mask makes it work.
Comment 3 Carlos Garnacho 2015-03-02 14:49:41 UTC
The following fix has been pushed:
1feaa6f scrolledwindow: Add motion mask to the widget window
Comment 4 Carlos Garnacho 2015-03-02 14:49:46 UTC
Created attachment 298304 [details] [review]
scrolledwindow: Add motion mask to the widget window

This is not specified specifically by the attached controllers, so let
the scrolledwindow set the mask, as motion events with no buttons pressed
are interesting to it.